WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196998
AX: HTML datalist accessibility is not exposed by WebKit
https://bugs.webkit.org/show_bug.cgi?id=196998
Summary
AX: HTML datalist accessibility is not exposed by WebKit
James Craig
Reported
2019-04-16 18:30:56 PDT
Test case:
https://thepaciellogroup.github.io/AT-browser-tests/test-files/datalist.html
Spec:
https://html.spec.whatwg.org/multipage/form-elements.html#the-datalist-element
MDN:
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/datalist
Attachments
Patch
(6.33 KB, patch)
2019-07-09 12:35 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-highsierra
(3.31 MB, application/zip)
2019-07-09 13:24 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews116 for mac-highsierra
(3.09 MB, application/zip)
2019-07-09 14:26 PDT
,
EWS Watchlist
no flags
Details
Patch
(6.29 KB, patch)
2019-07-09 14:29 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(6.36 KB, patch)
2019-07-09 16:47 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-highsierra
(3.31 MB, application/zip)
2019-07-09 17:51 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews112 for mac-highsierra
(3.32 MB, application/zip)
2019-07-09 18:58 PDT
,
EWS Watchlist
no flags
Details
Patch
(8.10 KB, patch)
2019-07-09 19:26 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-16 18:31:16 PDT
<
rdar://problem/49962521
>
Andres Gonzalez
Comment 2
2019-07-09 12:35:57 PDT
Created
attachment 373744
[details]
Patch
chris fleizach
Comment 3
2019-07-09 12:53:46 PDT
Comment on
attachment 373744
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373744&action=review
> Source/WebCore/accessibility/AccessibilityObject.cpp:2795 > + RefPtr<Element> element = this->element();
auto
> Source/WebCore/accessibility/AccessibilityObject.cpp:2799 > + RefPtr<Element> datalist = element->treeScope().getElementById(datalistId);
auto
> Source/WebCore/accessibility/AccessibilityObject.cpp:2800 > + return (datalist && is<HTMLDataListElement>(datalist));
the datalist pointer check seems like it might not necessary since is<HTMLDataListElement> should handle the null
EWS Watchlist
Comment 4
2019-07-09 13:24:19 PDT
Comment on
attachment 373744
[details]
Patch
Attachment 373744
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/12700457
New failing tests: accessibility/datalist.html
EWS Watchlist
Comment 5
2019-07-09 13:24:21 PDT
Created
attachment 373750
[details]
Archive of layout-test-results from ews100 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 6
2019-07-09 14:26:27 PDT
Comment on
attachment 373744
[details]
Patch
Attachment 373744
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12700741
New failing tests: accessibility/datalist.html
EWS Watchlist
Comment 7
2019-07-09 14:26:29 PDT
Created
attachment 373766
[details]
Archive of layout-test-results from ews116 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-highsierra Platform: Mac OS X 10.13.6
Andres Gonzalez
Comment 8
2019-07-09 14:29:43 PDT
Created
attachment 373767
[details]
Patch
Andres Gonzalez
Comment 9
2019-07-09 14:37:27 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 373744
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=373744&action=review
> > > Source/WebCore/accessibility/AccessibilityObject.cpp:2795 > > + RefPtr<Element> element = this->element(); > > auto
> Thought that RefPtr does some referencing counting on the pointer it holds and thus it would be better to type it explicitly. Never know what these functions that return a naked pointer are doing behind the scene.
> > Source/WebCore/accessibility/AccessibilityObject.cpp:2799 > > + RefPtr<Element> datalist = element->treeScope().getElementById(datalistId); > > auto >
Changed this one to auto but feel that is an example of auto abuse since it is harder to figure out the type of datalist from the initialization on the right hand side than actually typing the variable explicitly.
> > Source/WebCore/accessibility/AccessibilityObject.cpp:2800 > > + return (datalist && is<HTMLDataListElement>(datalist)); > > the datalist pointer check seems like it might not necessary since > is<HTMLDataListElement> should handle the null
Done.
Andres Gonzalez
Comment 10
2019-07-09 16:47:31 PDT
Created
attachment 373793
[details]
Patch
Andres Gonzalez
Comment 11
2019-07-09 16:49:43 PDT
#if for datalist feature availability.
chris fleizach
Comment 12
2019-07-09 17:26:59 PDT
Comment on
attachment 373793
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373793&action=review
> LayoutTests/ChangeLog:9 > + * accessibility/datalist-expected.txt: Added.
will probably need TestExpectation changes to platforms not supporting datalist also I suspect that other platforms have not implemented popupValue for WKTR and DRT so this test will probably fail on that (GTK)
EWS Watchlist
Comment 13
2019-07-09 17:51:23 PDT
Comment on
attachment 373793
[details]
Patch
Attachment 373793
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/12703171
New failing tests: accessibility/datalist.html
EWS Watchlist
Comment 14
2019-07-09 17:51:25 PDT
Created
attachment 373799
[details]
Archive of layout-test-results from ews101 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 15
2019-07-09 18:58:39 PDT
Comment on
attachment 373793
[details]
Patch
Attachment 373793
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12703320
New failing tests: accessibility/datalist.html
EWS Watchlist
Comment 16
2019-07-09 18:58:41 PDT
Created
attachment 373807
[details]
Archive of layout-test-results from ews112 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-highsierra Platform: Mac OS X 10.13.6
Andres Gonzalez
Comment 17
2019-07-09 19:26:57 PDT
Created
attachment 373810
[details]
Patch
Andres Gonzalez
Comment 18
2019-07-09 19:29:24 PDT
Updated TestExpectations for platforms that have no support for datalist.
WebKit Commit Bot
Comment 19
2019-07-09 23:34:03 PDT
Comment on
attachment 373810
[details]
Patch Clearing flags on attachment: 373810 Committed
r247295
: <
https://trac.webkit.org/changeset/247295
>
WebKit Commit Bot
Comment 20
2019-07-09 23:34:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug