AX: HTML datalist accessibility is not exposed by WebKit https://bugs.webkit.org/show_bug.cgi?id=196998 <rdar://problem/49962521>

Patch by Andres Gonzalez <andresg_22@apple.com> on 2019-07-09
Reviewed by Chris Fleizach.

Source/WebCore:

Input fields with datalist are exposed as having a listbox popup.

Test: accessibility/datalist.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::popupValue const):
(WebCore::AccessibilityObject::hasDatalist const):
* accessibility/AccessibilityObject.h:

LayoutTests:

* accessibility/datalist-expected.txt: Added.
* accessibility/datalist.html: Added.

Canonical link: https://commits.webkit.org/213542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247295 268f45cc-cd09-0410-ab3c-d52691b4dbfc